removed some unused methods, added mokito testing for booking and review services